--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "prettier": "3.0.1"
   },
   "resolutions": {
-    "nth-check": "^2.1.1"
+    "nth-check": "^2.1.1",
+    "postcss": "^8.4.31"
   }
 }
